# snowiki

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  README.md  ROADMAP.ko.md  ROADMAP.md  STATUS.md  pyproject.toml  pyrightconfig.json
.github/: commit-message-rules.md  pull_request_template.md
.github/workflows/: benchmark-main.yml  benchmark-manual.yml  benchmark-official-pr.yml  benchmark-official-scheduled.yml  benchmark-pr.yml  ci.yml  pr-governance.yml  smoke.yml
.sisyphus/plans/: step1_lexical-foundation.md  step2-substep1-mixed-tokenizer-strategy.md  step2-substep2-operational-evidence.md  step2-substep3-mixed-tokenizer-redesign.md  step2-substep4-operational-evidence-implementation.md  step2-substep7-runtime-promotion-decision.md
benchmarks/: AGENTS.md  README.md  judgments.json  queries.json  real_public_manifest_sanity.py
benchmarks/contracts/: analyzer_promotion_gates.yaml  official_matrix.yaml  snowiki_regression_matrix.yaml
docs/: README.md
docs/architecture/: analyzer-promotion-gates.md  autonomous-writeback-phase3-plan.md  autonomous-writeback-queue-plan.md  bm25-retrieval-engine-v2-plan.md  bm25-retrieval-engine.md  cli-command-implementation-plan.md  cli-command-taxonomy.md  current-capability-and-gap.md  current-retrieval-architecture.ko.md  current-retrieval-architecture.md  llm-wiki-ingest-redesign.md  markdown-ingest-phase1-plan.md  markdown-ingest-phase2-plan.md  mutation-external-contracts.md  mutation-rebuild-boundary.md  operation-materialization-boundary.md  refactoring-operating-principles.md  retrieval-decision-matrix.md  rust-native-acceleration-roadmap.md  skill-and-agent-interface-contract.md  source-vault-compiled-taxonomy.md  wiki-contract-phase4-plan.md  wiki-contract-phase5-plan.md  wiki-contract-phase6-plan.md
docs/archive/: README.md  root-roadmap.md
docs/reference/: README.md  claude-code-wiki-quickstart.md  korean-cjk-regression-slice.md  llm-wiki-implementation-survey.md  tokenizer-explain-trace.md
docs/research/: qmd-lineage-and-korean-strategy.ko.md  qmd-lineage-and-korean-strategy.md  search-system-comparison-matrix.md
docs/roadmap/: STATUS.md  follow-up-program.ko.md  follow-up-program.md  main-roadmap.md
docs/vision/: snowiki-vision.ko.md
fixtures/claude/: basic.jsonl  large_output.jsonl  resumed.jsonl  secret_bearing.jsonl  with_attachments.jsonl  with_sidechains.jsonl  with_tools.jsonl
fixtures/opencode/: basic.db  with_compaction.db  with_diffs.db  with_reasoning.db  with_todos.db
fixtures/retrieval/: golden_queries.json
reports/: core-audit.json  full-audit.json  retrieval-audit.json
scripts/: check_commit_message.py  check_governance.py  check_ignored_artifacts.py  check_pr_governance.py  generate_fixtures.py  generate_opencode_fixtures.py  promote_lexical_policy.py
skill/: AGENTS.md  SKILL.md
skill/examples/: fileback-preview.md  recall-response.md  session-note.md
skill/references/: wiki-workflow.md
skill/scripts/: lint.py  query.py  read_router.py  recall.py  status.py
skill/workflows/: wiki.md
snowiki/: config.py
snowiki/bench/: __init__.py  baselines.py  contract.py  corpus.py  latency.py  models.py  phase1_correctness.py  phase1_latency.py  presets.py  quality.py  render.py  report.py  semantic_slots.py  token_reduction.py
snowiki/cli/: main.py  output.py
snowiki/compiler/: engine.py  paths.py  provenance_links.py  taxonomy.py
snowiki/daemon/: cache.py  invalidation.py
snowiki/dedupe/: tombstone.py
snowiki/lint/: __init__.py  integrity.py  orphaned.py  stale_links.py
snowiki/mcp/: __init__.py  server.py  stdio.py  types.py
snowiki/rebuild/: integrity.py
snowiki/schema/: __init__.py  artifact.py  content.py  event.py  provenance.py
snowiki/search/: __init__.py  bm25_index.py  index_lexical.py  index_wiki.py  kiwi_tokenizer.py  semantic_abstraction.py  tokenizer.py
snowiki/storage/: compiled.py  normalized.py  provenance.py  quarantine.py  raw.py  zones.py
src/snowiki/: __init__.py  benchmark_fetch.py  benchmark_gates.py  benchmark_targets.py  (+2 more)
tests/: conftest.py  test_config.py
vault-template/: AGENTS.md  CLAUDE.md  SCHEMA.md
(+548 files in other folders)
