[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "snowiki"
version = "0.1.0"
description = "Snowiki V2 CLI-first operational surface"
requires-python = ">=3.14"
dependencies = [
  "click>=8.3.3",
  "pydantic>=2",
  "huggingface_hub>=0.34.0",
  "datasets>=3.0.0",
  "kiwipiepy>=0.21.0",
  "bm25s>=0.2.0",
  "numpy>=1.24.0",
  "tokenizers>=0.22.2",
  "mecab-python3>=1.0.12",
  "python-mecab-ko-dic>=2.1.1.post2",
  "pyyaml>=6.0.2",
  "python-frontmatter>=1.1.0",
  "markdown-it-py>=4.0.0",
  "markitdown[all]>=0.1.5,<0.2.0",
]

[project.scripts]
snowiki = "snowiki.cli.main:app"

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.14.1",
  "ruff>=0.15.12",
  "ty>=0.0.32",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = []

[tool.uv.build-backend]
module-name = "snowiki"
module-root = "src"

[tool.ruff]
line-length = 88
target-version = "py314"
src = ["src", "tests"]
extend-exclude = [
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
  "compiled",
  "dist",
  "index",
  "raw",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers --import-mode=importlib -m 'not integration and not bench and not perf'"
testpaths = ["tests"]
norecursedirs = [".venv", ".pytest_cache", ".ruff_cache", "dist", "build"]
markers = [
  "integration: tests that exercise real runtime boundaries and are excluded from the default unit test loop",
  "bench: benchmark-domain tests and heavy dataset-driven evaluation that are excluded from the default unit test loop",
  "perf: performance and latency-sensitive tests that are excluded from the default unit test loop",
]

[tool.coverage.run]
branch = true
source = ["snowiki"]
omit = [
  "tests/*",
  "src/snowiki/__main__.py",
]
